hide overflow on xs screen, img fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2182,8 +2182,8 @@ header nav .menulist li a {
 }
 
 #lottie-player {
-  width: 100%;
-  height: 115vh;
+  width: 1900px;
+  height: 116vh;
 }
 
 .scale:hover {
@@ -2194,6 +2194,11 @@ header nav .menulist li a {
 @media screen and (max-width: 576px) {
   #dotted-button {
     display: none;
+  }
+
+  #lottie-player {
+    width: 800px;
+    height: 116vh;
   }
 
   .popup-note .pop {
@@ -2217,12 +2222,16 @@ header nav .menulist li a {
     bottom: 30px;
   }
 
+  #landing-jumbo {
+    overflow-x: hidden;
+  }
+
   #landing-jumbo #background-jumbo #or {
     display: none;
   }
 
   #landing-jumbo #background-jumbo .type {
-    z-index: 1;
+    z-index: 20;
   }
 
   #landing-jumbo #background-jumbo .type img {
@@ -2248,6 +2257,7 @@ header nav .menulist li a {
     position: absolute;
     top: 58%;
     left: 64%;
+    z-index: 999;
   }
 
   #landing-jumbo #background-jumbo #sushi img {
@@ -2327,6 +2337,11 @@ header nav .menulist li a {
 }
 
 @media (max-width: 1192px) and (min-width: 873px) {
+  #lottie-player {
+    width: 900px;
+    height: 116vh;
+  }
+
   #dotted-button {
     display: flex;
     margin-left: 0px;
@@ -2430,6 +2445,11 @@ header nav .menulist li a {
 }
 
 @media (max-width: 872px) and (min-width: 577px) {
+  #lottie-player {
+    width: 872px;
+    height: 116vh;
+  }
+
   #dotted-button {
     display: none;
   }
