--- a/resources/sass/partials/_landing.scss
+++ b/resources/sass/partials/_landing.scss
@@ -200,8 +200,8 @@
 
 //boobles
 #lottie-player {
-    width: 100%;
-    height: 115vh;
+    width: 1900px;
+    height: 116vh;
 }
 
 //scale img on hover
@@ -217,6 +217,13 @@
     #dotted-button {
         display: none;
     }
+
+    //boobles
+    #lottie-player {
+        width: 800px;
+        height: 116vh;
+    }
+
     
     // resize pop hovers
     .popup-note {
@@ -242,12 +249,13 @@
     }
     
     #landing-jumbo {
+        overflow-x: hidden;
         #background-jumbo {
             #or {
                 display: none;
             }
             .type {
-                z-index: 1;
+                z-index: 20;
                 img {
                 animation: float-up 5s ease-in-out infinite;
                 width: 80px;
@@ -268,6 +276,7 @@
                 position: absolute;
                 top: 58%;
                 left: 64%;
+                z-index: 999;
                 img {
                     width: 100px;
                 }
@@ -336,6 +345,13 @@
   } // /@<576px
 
   @media (max-width:1192px) and (min-width:873px) {
+    //boobles
+    #lottie-player {
+        width: 900px;
+        height: 116vh;
+    }
+    
+
     #dotted-button {
         display: flex;
         margin-left: 0px;
@@ -433,6 +449,12 @@
   }
 
   @media (max-width:872px) and (min-width:577px) {
+    //boobles
+    #lottie-player {
+        width: 872px;
+        height: 116vh;
+    }
+ 
     #dotted-button {
         display: none;
     }
